# brain3

./: .coderabbit.yaml  .env.template  .gitignore  AGENTS.MD  Architecture.excalidraw  Cargo.toml  DESIGN.MD  E2E_TEST_PLAN.MD  LICENSE.MD  NOTICE.MD  POC_PLAN.MD  PRD.MD  README.MD  RELEASE_PROCESS.md  RUST_DESIGN.md  SECURITY_AUDIT.md
.claude/skills/bump-version/: SKILL.md  bump.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  container.yml  e2e.yml  pr-build.yml  release.yml  scorecard.yml
apps/gateway/: Cargo.toml
apps/gateway/src/: logging.rs  main.rs  release.rs  server.rs  setup_tui.rs
apps/gateway/src/tui/: app.rs  mod.rs  runtime_logs.rs  screens.rs  state.rs
apps/gateway/tests/: e2e_smoke.rs
brain3-mcp-server/: Containerfile  README.md
brain3-mcp-server/scripts/: build-container.sh  run-container.sh
brain3-mcp-vault-tools/: .env.template  .gitignore  Containerfile  README.md  pyproject.toml
brain3-mcp-vault-tools/scripts/: build-container.sh  run-container.sh  start-mcp-server.sh
brain3-mcp-vault-tools/src/brain3_mcp_vault_tools/: config.py  frontmatter_index.py  models.py  server.py  vault.py
brain3-mcp-vault-tools/src/brain3_mcp_vault_tools/tools/: patch.py  read.py  search.py
brain3-mcp-vault-tools/src/obsidian_mcp_server/tools/: write.py
brain3-mcp-vault-tools/tests/: test_case_insensitive_search.py  test_server_startup.py  test_tool_write_patch_api.py  test_upstream_access_control.py
crates/core/: Cargo.toml
crates/platform/: Cargo.toml
crates/platform/src/: lib.rs
crates/platform/src/auth_code_store/: in_memory.rs
crates/platform/src/config/: env_file.rs  log_config.rs  mod.rs  upstream_secret.rs
crates/platform/src/container/: docker.rs  macos_container.rs  mod.rs  process.rs  startup.rs
crates/platform/src/http/: assets.rs  health.rs  mcp_handlers.rs  mod.rs  oauth_handlers.rs  rate_limit.rs  registrar.rs  router.rs  state.rs  templates.rs
crates/platform/src/http/assets/: login.css
crates/platform/src/mcp_proxy/: mod.rs  reqwest_proxy.rs  unix_socket_proxy.rs
crates/platform/src/runtime/: bootstrap.rs  diagnostics.rs  health_probe.rs  mod.rs
crates/platform/src/setup/: app_home.rs  env_template.rs  env_writer.rs  mod.rs  system.rs
crates/platform/src/token_store/: mod.rs  sqlite.rs  token_map.rs
crates/platform/src/tunnel/: cloudflare_named.rs  cloudflare_quick.rs  cloudflare_setup.rs  lifecycle.rs  mod.rs  probe.rs  startup.rs
crates/platform/tests/: oauth_integration.rs  setup_bootstrap.rs
docs/: DESIGN.MD  POTENTIAL_SECURITY_RISKS.md  RELEASE_PROCESS.md  RUST_DESIGN.md  SECURITY.MD  SECURITY_AUDIT_LATEST.md  privacy_and_security_details.md  security_audit_claude_sonnet_4_6.md
docs/logo/brain3-logo/: README.txt
docs/security/: changelog.md
docs/security/codex-scan-2026-06-24/: findings.json
docs/security/codex-security-scan-2026-06-24/: finding_discovery_report.md  report.md  repository_coverage_ledger.md  reviewed_surfaces.md  threat_model.md
docs/superpowers/plans/: 2026-06-06-oauth2-gateway-mcp-reverse-proxy.md  2026-06-07-chatgpt-mcp-cimd-compatibility.md  2026-06-07-obsidian-mcp-container-build-runtime.md  2026-06-07-preregistered-oauth-lockdown.md  2026-06-08-mcp-upstream-hardening.md  2026-06-11-brain3-first-run-followup.md  2026-06-12-refresh-tokens.md  2026-06-12-runtime-startup-health-and-legacy-image-selection.md  2026-06-12-token-store.md  2026-06-12-versioned-container-tagging.md  2026-06-13-mcp-container-network-isolation-toggle.md  2026-06-13-mcp-container-network-isolation.md  2026-06-13-mcp-container-network-recreation.md  2026-06-14-docker-direct-container-ip.md  2026-06-14-docker-internal-network-isolation-rca-and-fix-plan.md  2026-06-14-mcp-container-network-isolation-publish-port-docker-fix.md  2026-06-20-release-signing-phase1.md  2026-06-22-container-image-repo-tag-split.md  2026-06-22-oxide-auth-follow-up.md  2026-06-22-oxide-conversion.md  2026-06-22-refresh-token-fix.md  2026-06-22-release-signing-contd.md  2026-06-23-local-bearer-auth-no-tunnel.md  2026-06-24-access-mode-env-port-enforcement.md  2026-06-24-access-mode-wizard-screen.md  2026-06-24-brain3-mcp-vault-tools-lockfile-sync.md  2026-06-24-change-default-ports.md  2026-06-24-comment-out-oauth-fields-in-local-mode.md  (+31 more)
obsidian-mcp-container/: Containerfile  README.md
obsidian-mcp-container/scripts/: run-container.sh
obsidian-mcp-container/tests/: test_server_startup.py
plans/: finalize_and_start_progress.md
poc/: README.md
poc/oauth2-host-gw/: .env.template  .gitignore  README.md  pyproject.toml
poc/oauth2-host-gw/scripts/: cf-tunnel-common.sh  generate_secrets.sh  run-cf-tunnel-with-domain.sh  setup-cf-tunnel-with-domain.sh  start-oauth2-server.sh  start-server.sh
poc/oauth2-host-gw/src/oauth2_gateway/: client_metadata.py  config.py  mcp_proxy.py  oauth.py  server.py  token_store.py
poc/oauth2-host-gw/tests/: test_mcp_proxy.py  test_oauth_cimd.py  test_oauth_metadata.py  test_oauth_security.py  test_server_cli.py
poc/obsidian-mcp-container/: .dockerignore  .env.template  Containerfile  README.md  pyproject.toml
poc/obsidian-mcp-container/scripts/: build-container.sh  run-container.sh  start-server.sh
poc/obsidian-mcp-container/src/obsidian_mcp_server/: config.py  server.py  vault.py
poc/obsidian-mcp-container/src/obsidian_mcp_server/tools/: patch.py  read.py  search.py
poc/obsidian-mcp-container/test_vault/: 3. MacOS Native Containers vs Docker.md  4. What is an LLMWiki.md  Fish.md
poc/obsidian-mcp-container/test_vault/echo cancellation fluensy/: echo-identification-deep-dive.md
poc/obsidian-mcp-container/tests/: test_server_startup.py  test_tool_write_patch_api.py  test_upstream_access_control.py
poc/orig_codebase_obsidian_web_mcp/: .env.template  .gitignore  README.md  pyproject.toml
poc/scripts/: ensure-mcp-upstream-secret.sh  run.sh  stop.sh
scripts/: cf-tunnel-common.sh  e2e_smoke.py  generate-release-manifest.sh  install.sh  release-signing-public-key.pem  setup-cf-tunnel-with-domain.sh  test-release-signing.sh  test_e2e_smoke.py  upload-to-s3.sh
(+46 files in other folders)
