[project]
name = "brain3-mcp-vault-tools"
version = "0.1.9"
description = "Authless MCP server for an Obsidian vault"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.28.0",
    "python-frontmatter>=1.1.0",
    "pydantic>=2.0",
    "watchdog>=4.0.0",
]

[project.scripts]
brain3-mcp-vault-tools = "brain3_mcp_vault_tools.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/brain3_mcp_vault_tools"]
