[package]
name = "brain3"
version = "0.2.7"
edition = "2021"

[[bin]]
name = "brain3"
path = "src/main.rs"

[dependencies]
brain3-core = { path = "../../crates/core" }
brain3-platform = { path = "../../crates/platform" }
anyhow = "1"
oxide-auth = "0.6"
axum = "0.8"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
ratatui = "0.30.2"
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", features = ["client", "transport-streamable-http-client-reqwest"] }
serde_json = { version = "1", optional = true }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
e2e = ["dep:serde_json"]
