[package]
name = "brain3-platform"
version = "0.1.0"
edition = "2021"

[dependencies]
brain3-core = { path = "../core" }
async-trait = "0.1"
libc = "0.2"
axum = "0.8"
tower-http = { version = "0.6", features = ["trace"] }
anyhow = "1"
dotenvy = "0.15"
rand = "0.9"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "time"] }
tokio = { version = "1", features = ["sync", "process", "fs"] }
tracing = "0.1"
urlencoding = "2"
governor = "0.7"

[dev-dependencies]
axum-test = "17"
time = "=0.3.47"
tokio = { version = "1", features = ["full"] }
