[package]
name = "brain3-platform"
version = "0.1.0"
edition = "2021"

[dependencies]
brain3-core = { path = "../core" }
async-trait = "0.1"
libc = "0.2"
axum = "0.8"
tower-http = { version = "0.7", features = ["trace"] }
anyhow = "1"
dotenvy = "0.15"
rand = "0.10"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.9", features = ["sqlite", "runtime-tokio", "time"] }
tokio = { version = "1", features = ["sync", "process", "fs"] }
tracing = "0.1"
urlencoding = "2"
governor = "0.10"
oxide-auth = "0.6"
oxide-auth-async = "0.2"
oxide-auth-axum = "0.6"
subtle = "2"

[dev-dependencies]
axum-test = "20"
tokio = { version = "1", features = ["full"] }
