[project]
name = "oauth2-gateway"
version = "0.1.0"
description = "OAuth-only gateway extracted from obsidian-web-mcp"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "starlette>=0.37.2",
    "uvicorn>=0.30.0",
]

[project.scripts]
oauth2-gateway = "oauth2_gateway.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oauth2_gateway"]
